# IRIS

./: .gitignore  InitialExperiments.ipynb  LICENSE  README.md  TECHNICAL_Description.md
IRIS_VST/: CMakeLists.txt  build_output.txt  build_output_wall.txt  plugin_report.txt  rebuild_final.txt  rebuild_manual.txt  rebuild_output.txt  test_osc.py
IRIS_VST/Source/V2/: ControlPanelComponent.cpp  ControlPanelComponentV2.h  IRListComponentV2.h  PluginEditor.cpp  PluginEditorV2.h  PluginProcessorV2.h  RoomMapComponentV2.h
IRIS_VST/Source/V3/: ControlPanelComponent.cpp  ControlPanelComponentV3.cpp  ControlPanelComponentV3.h  IRListComponent.cpp  IRListComponentV3.h  IrisOSCManager.h  PluginEditor.cpp  PluginEditorV3.h  PluginProcessor.cpp  PluginProcessorV3.h  RoomMapComponent.cpp  RoomMapComponentV3.h  WallListComponent.cpp  WallListComponentV3.h
IRIS_VST/Source/V4/: ControlPanelComponentV4.cpp  ControlPanelComponentV4.h  IRListComponent.cpp  IRListComponentV4.h  IconButtonV4.h  IrisLookAndFeel.cpp  IrisLookAndFeel.h  IrisOSCManager.cpp  IrisOSCManager.h  ListenerListComponentV4.cpp  ListenerListComponentV4.h  PluginEditor.cpp  PluginEditorV4.h  PluginProcessor.cpp  PluginProcessorV4.h  RoomMapComponent.cpp  RoomMapComponentV4.h  Theme.cpp  Theme.h  WallListComponent.cpp  WallListComponentV4.h
dev/: DIAGNOSTIC_V3.md  Implementation.ipynb  iris_knn.js  test_osc.py
dev/IRIS_VST/Source/V2/: IRListComponent.cpp  PluginProcessor.cpp  RoomMapComponent.cpp
dev/IRIS_VST/Source/V3/: IconButtonV3.h  PluginEditor.cpp  RoomMapComponent.cpp
github_release/IRIS_VST/Source/V3/: ControlPanelComponentV3.h  IrisOSCManager.cpp
